--- a/configs/1D/regression/heat.yaml
+++ b/configs/1D/regression/heat.yaml
@@ -51,13 +51,14 @@ embedding_dim: 1
 #######################################################################################
 # Data
 #######################################################################################
-pde: ks
+pde: heat
+norm_vars: false
 pde_dim: 1
 num_samples: 2000
 train_path: YOUR_PATH_TO_TRAINING_DATA
 valid_path: YOUR_PATH_TO_VALID_DATA
-norm_stat_path: checkpoints/stats/Stats_KS_1D_train.pkl
-base_resolution: [100, 100]
+norm_stat_path: checkpoints/stats/Stats_Heat_1D_train.pkl
+base_resolution: [250, 100]
 t_range: [0, 2]
 x_range: [0, 16]
 load_all: true
