--- a/configs/1D/regression/heatBC.yaml
+++ b/configs/1D/regression/heatBC.yaml
@@ -3,7 +3,7 @@
 #######################################################################################
 batch_size: 256
 val_batch_size: 64
-num_epochs: 10
+num_epochs: 5
 description: Regression_small
 multiprocessing: false
 device: cuda:0
@@ -13,7 +13,7 @@ n_inner: 5
 pretrained_path: none
 freeze: false
 normalize: false
-mode: regression
+mode: classification
 
 #######################################################################################
 # Model
@@ -46,17 +46,18 @@ div_factor: 10
 final_div_factor: 1000
 dropout: 0.0
 emb_dropout: 0.0
-embedding_dim: 1
+embedding_dim: 3
 
 #######################################################################################
 # Data
 #######################################################################################
-pde: heat
+pde: heat_combined
+norm_vars: false
 pde_dim: 1
 num_samples: 2000
 train_path: YOUR_PATH_TO_TRAINING_DATA
 valid_path: YOUR_PATH_TO_VALID_DATA
-norm_stat_path: checkpoints/stats/Stats_Heat_1D_train.pkl
+norm_stat_path: checkpoints/stats/Stats_Heat_Combined_1D_train.pkl
 base_resolution: [250, 100]
 t_range: [0, 2]
 x_range: [0, 16]
