--- a/configs/1D/regression/kdv.yaml
+++ b/configs/1D/regression/kdv.yaml
@@ -46,17 +46,18 @@ div_factor: 10
 final_div_factor: 1000
 dropout: 0.0
 emb_dropout: 0.0
-embedding_dim: 1
+embedding_dim: 3
 
 #######################################################################################
 # Data
 #######################################################################################
-pde: advection
+pde: kdv_burgers
+norm_vars: false
 pde_dim: 1
 num_samples: 2000
 train_path: YOUR_PATH_TO_TRAINING_DATA
 valid_path: YOUR_PATH_TO_VALID_DATA
-norm_stat_path: checkpoints/stats/Stats_Advection_1D_train.pkl
+norm_stat_path: checkpoints/stats/Stats_KdVBurgers_1D_train.pkl
 base_resolution: [250, 100]
 t_range: [0, 2]
 x_range: [0, 16]
