--- a/configs/1D/regression/resolution.yaml
+++ b/configs/1D/regression/resolution.yaml
@@ -21,7 +21,7 @@ mode: classification
 encoder: VIT
 pretrained_path: none
 pad: False
-pos_mode: none
+pos_mode: interpolate
 encoder_pool: cls
 encoder_dim: 256
 encoder_mlp_dim: 512
@@ -46,17 +46,18 @@ div_factor: 10
 final_div_factor: 1000
 dropout: 0.0
 emb_dropout: 0.0
-embedding_dim: 2
+embedding_dim: 6
 
 #######################################################################################
 # Data
 #######################################################################################
-pde: wave_combined
+pde: kdv_burgers_resolution
+norm_vars: false
 pde_dim: 1
 num_samples: 2000
 train_path: YOUR_PATH_TO_TRAINING_DATA
 valid_path: YOUR_PATH_TO_VALID_DATA
-norm_stat_path: checkpoints/stats/Stats_Wave_Combined_1D_train.pkl
+norm_stat_path: checkpoints/stats/Stats_KdVBurgers_1D_train.pkl
 base_resolution: [250, 100]
 t_range: [0, 2]
 x_range: [0, 16]
@@ -69,6 +70,6 @@ max_scale: 0.5
 max_nodal_shift: 0.25
 encoder_embedding_dim: 0
 embedding_mode: none
-sizes: []
+sizes: [50, 60, 70, 80, 90 ,100]
 
 
