--- a/configs/1D/pretrain_ssl.yaml
+++ b/configs/1D/pretrain_ssl.yaml
@@ -46,6 +46,9 @@ final_div_factor: 1000
 dropout: 0.0
 emb_dropout: 0.0
 mlp: "256-128-64"
+sim_coeff: 25.0
+std_coeff: 25.0
+cov_coeff: 1.0
 
 #######################################################################################
 # Data
