--- a/configs/1D/timestep/ssl/heat.yaml
+++ b/configs/1D/timestep/ssl/heat.yaml
@@ -76,7 +76,7 @@ sizes: []
 #######################################################################################
 # Timestepper
 #######################################################################################
-model: ViT
+model: FNO1D
 fno_modes: 24
 fno_width: 64
 fno_num_layers: 4
