--- a/configs/1D/timestep/ssl/burgers.yaml
+++ b/configs/1D/timestep/ssl/burgers.yaml
@@ -51,14 +51,14 @@ embedding_dim: 32
 #######################################################################################
 # Data
 #######################################################################################
-pde: heat
+pde: burgers
 pde_dim: 1
-n_vars: 1
+n_vars: 0
 norm_vars: false
 num_samples: 2000
-train_path: /home/ayz2/data_gen/pde-context/1D/train/Heat_4096.h5
-valid_path: /home/ayz2/data_gen/pde-context/1D/valid/Heat_256.h5
-norm_stat_path: checkpoints/stats/Stats_Heat_1D_train.pkl
+train_path: /home/ayz2/data_gen/pde-context/1D/train/Burgers_4096.h5
+valid_path: /home/ayz2/data_gen/pde-context/1D/valid/Burgers_256.h5
+norm_stat_path: checkpoints/stats/Stats_Burgers_1D_train.pkl
 base_resolution: [250, 100]
 t_range: [0, 2]
 x_range: [0, 16]
