--- a/configs/1D/timestep/vit/heat_PT.yaml
+++ b/configs/1D/timestep/vit/heat_PT.yaml
@@ -76,7 +76,7 @@ sizes: []
 #######################################################################################
 # Timestepper
 #######################################################################################
-model: FNO1D
+model: ViT
 fno_modes: 24
 fno_width: 64
 fno_num_layers: 4
