--- a/configs/2D/timestep/ns_PT.yaml
+++ b/configs/2D/timestep/ns_PT.yaml
@@ -76,7 +76,7 @@ sizes: []
 #######################################################################################
 # Timestepper
 #######################################################################################
-model: FNO2D
+model: Unet2D
 fno_modes: 12
 fno_width: 48
 fno_num_layers: 4
