--- a/configs/1D/timestep/mae/adv_PT_FT.yaml
+++ b/configs/1D/timestep/mae/adv_PT_FT.yaml
@@ -10,7 +10,7 @@ device: cuda:0
 seed: 0
 wandb_mode: online
 pretrained_path: none
-freeze: true
+freeze: false
 normalize: false
 verbose: false
 add_vars: false 
@@ -19,7 +19,7 @@ add_vars: false
 # Model
 #######################################################################################
 encoder: VIT
-pretrained_path: /home/ayz2/pde-context/checkpoints/new/SSL_VIT_256_mask0.75_aug0.5_7311658.pth
+pretrained_path: /home/ayz2/pde-context/checkpoints/new/MAE_small_Aug_VIT_256_mask0.75_aug0.5_511024.pth
 pad: False
 pos_mode: none
 encoder_pool: cls
@@ -51,14 +51,14 @@ embedding_dim: 32
 #######################################################################################
 # Data
 #######################################################################################
-pde: kdv_burgers
+pde: advection
 pde_dim: 1
-n_vars: 3
+n_vars: 1
 norm_vars: false
 num_samples: 2000
-train_path: /home/ayz2/data_gen/pde-context/1D/train/KdVBurgers_4096.h5
-valid_path: /home/ayz2/data_gen/pde-context/1D/valid/KdVBurgers_256.h5
-norm_stat_path: checkpoints/stats/Stats_KdVBurgers_1D_train.pkl
+train_path: /home/ayz2/data_gen/pde-context/1D/train/Advection_4096.h5
+valid_path: /home/ayz2/data_gen/pde-context/1D/valid/Advection_256.h5
+norm_stat_path: checkpoints/stats/Stats_Advection_1D_train.pkl
 base_resolution: [250, 100]
 t_range: [0, 2]
 x_range: [0, 16]
